@@ -1,4 +1,4 @@
-/* GNOME DB libary
+/* GDA client library
  * Copyright (C) 1998,1999 Michael Lausch
  * Copyright (C) 1999,2000 Rodrigo Moya
  *
@@ -17,7 +17,23 @@
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
+#include "config.h"
 #include <gda-client.h>
+
+#ifdef ENABLE_NLS
+#  include <libintl.h>
+#  define _(String) gettext (String)
+#  define N_(String) (String)
+#else
+/* Stubs that do something close enough. */
+#  define textdomain(String)
+#  define gettext(String) (String)
+#  define dgettext(Domain,Message) (Message)
+#  define dcgettext(Domain,Message,Type) (Message)
+#  define bindtextdomain(Domain,Directory)
+#  define _(String) (String)
+#  define N_(String) (String)
+#endif
 
 static GHashTable* factories = 0;
 
